# finveri

./: .env.example  .gitignore  ADVANCED_TA_IMPLEMENTATION.md  CHANGELOG_ADVANCED_TA.md  CLOUDFLARE_MIGRATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  ca.pem  clear_cache.py  create_db.py  endeksbist.xlsx  fastapi-cloud.yaml  migrate_to_postgres.py  pylock.toml  pyproject.toml  read_transcript.py  requirements.txt  schema.sql  sync_prices_for_comp.py  test_aa_variants.py  test_advanced_ta.py  test_isyatirim_bulk.py  test_isyatirim_individual.py  test_new_modules.py  test_query.py  test_ta.py  wrangler.fetcher.jsonc  wrangler.historical.jsonc  wrangler.jsonc
.fastapicloud/: cloud.json
.wrangler/cache/: cf.json  wrangler-account.json
app/: main.py
app/core/: config.py  db.py  index_store.py  redis_client.py  ticker_store.py  yfinance_client.py
app/models/: history.py  instrument.py  item.py
app/routers/: instruments.py  ta.py  ta_advanced.py
app/services/: advanced_ta.py  ceo_ta_report.py  fundamental_service.py  gemini_service.py  summary_generator.py  ta_engine.py
app/sources/: aa.py  aa_market.py  frankfurter.py  isyatirim.py  pool.py
app/worker/: fetcher.py  historical.py  scheduler.py
data/: indices.json  tickers.json
docs/: frontend-integration.md  hono-integration.md
examples/: chatbot_integration.md
migrations/: 0001_daily_prices.sql
python_modules/fastapi-0.139.0.dist-info/: RECORD
python_modules/httpx-0.28.1.dist-info/: RECORD
scratch/: check_eregl_price.py  test_api_endpoint.py
src/: entry.py
src/app/: main.py
(+54 files in other folders)
