[project]
name = "finveri"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "python-dotenv>=1.0.0",
    "upstash-redis>=1.0.0",
    "httpx>=0.24.1",
    "apscheduler>=3.10.4",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "yfinance>=0.2.40",
    "requests-cache>=1.2.0",
    "requests-ratelimiter>=0.5.0",
    "tvdatafeed",
    "redis>=7.4.0",
    "google-generativeai>=0.8.0",
]

[tool.uv.sources]
tvdatafeed = { git = "https://github.com/rongardF/tvdatafeed.git" }
